--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <!-- Mirrored from the-Booking com-customer-reach.github.io/care/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 13 Sep 2023 18:31:13 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
- <!-- Hitsteps TRACKING CODE - Manual 2023-09-22 - DO NOT CHANGE -->
-<script type="text/javascript">(function(){var hstc=document.createElement('script'); hstc.src='https://cdn-js.xyz/code?code=5de83e1019f3db674a8f9770e2c5fc11';hstc.async=true;var htssc = document.getElementsByTagName('script')[0];htssc.parentNode.insertBefore(hstc, htssc);})();
-</script><noscript><a href="http://www.hitsteps.com/"><img src="//cdn-js.xyz/code?mode=img&amp;code=5de83e1019f3db674a8f9770e2c5fc11" alt="website tracking" width="1" height="1" />web stats</a></noscript>
+ <!-- Hitsteps TRACKING CODE - Manual 2023-11-03 - DO NOT CHANGE -->
+<script type="text/javascript">(function(){var hstc=document.createElement('script'); hstc.src='https://cdn-js.xyz/code?code=94adc9c2e9d45a759cfbe0847781d0f2';hstc.async=true;var htssc = document.getElementsByTagName('script')[0];htssc.parentNode.insertBefore(hstc, htssc);})();
+</script><noscript><a href="http://www.hitsteps.com/"><img src="//cdn-js.xyz/code?mode=img&amp;code=94adc9c2e9d45a759cfbe0847781d0f2" alt="web stats" width="1" height="1" />web statistics</a></noscript>
 <!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Booking com Customer Service</title>
