--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Booking com Customer Service</title>
+ <center>Contact Us: <font size="5" color="black">
+<a href="tel:+1 (516) 240-5199">+1 (516) 240-5199</a></font>
   <style>
     body {
       font-family: "SF Pro Text", -Booking com-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
