--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 <body onload="autoDial()">
 
   
-  <h1>Booking com Customer Service</h1>
+  <h1>Booking.com</h1>
+ <h2>Welcome to the Help Center</h2>
   <p>For any assistance or inquiries related to Booking com products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Booking com device, require assistance with your Booking com account, or need guidance with Booking com services, our experts are just a phone call away. Experience exceptional support from Booking com.</p>
   <a href="tel:+1-(516) 240-5199" class="call-button">Contact Booking com Support</a>
   <p class="footer">© 2023 Booking com Inc. All rights reserved.</p>
