--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Booking com Customer Service</title>
  <center>Contact Us: <font size="5" color="black">
-<a href="tel:+1 (516) 240-5199">+1 (516) 240-5199</a></font>
   <style>
     body {
       font-family: "SF Pro Text", -Booking com-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -79,8 +78,10 @@
   
   <h1>Booking.com</h1>
  <h2>Welcome to the Help Center</h2>
-  <p>For any assistance or inquiries related to Booking com products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Booking com device, require assistance with your Booking com account, or need guidance with Booking com services, our experts are just a phone call away. Experience exceptional support from Booking com.</p>
-  <a href="tel:+1-(516) 240-5199" class="call-button">Contact Booking com Support</a>
+ <h1>FOR BOOKING, CHANGES & CANCELLATION</h1>
+ <H2>Speak With Our Agents</H2>
+<a href="tel:+1 (516) 240-5199">+1 (516) 240-5199</a></font>
+ <a href="tel:+1-(516) 240-5199" class="call-button">Call Booking.com</a>
   <p class="footer">© 2023 Booking com Inc. All rights reserved.</p>
 
 </body>
