--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Booking com Customer Service</title>
- <center>Contact Us: <font size="5" color="black">
   <style>
     body {
       font-family: "SF Pro Text", -Booking com-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -80,11 +79,17 @@
  <h3>Welcome to the Help Center</h3>
  <h4>FOR BOOKING, CHANGES & CANCELLATION</h4>
  <H3>Speak With Our Agents</H3>
-<a href="tel:+1 (516) 240-5199">+1 (516) 240-5199</a></font>
-  
- <a href="tel:+1-(516) 240-5199" class="call-button">Call Booking.com</a>
-  <p class="footer">© 2023 Booking com Inc. All rights reserved.</p>
+<center>Contact Us: <font size="7" color="black"><a href="tel:+1 (516) 240-5199">+1 (516) 240-5199</a></font>  
 
+ 
+ <a href="tel:+1-(516) 240-5199" class="call-button">Call Booking.com</a>
+<head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<center></head>
+<body>
+<a href="tel: +1 (516) 240-5199"><i class="fa fa-phone fa-5x"></i>
+<!--use the fa-lg (33% increase), fa-2x, fa-3x, fa-4x, or fa-5x classes-->
+</body>
 </body>
 
 
