--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
   
   <h1>Booking.com</h1>
  <h2>Welcome to the Help Center</h2>
- <h3>FOR BOOKING, CHANGES & CANCELLATION</h3>
+ <h1>FOR BOOKING, CHANGES & CANCELLATION</h1>
  <H2>Speak With Our Agents</H2>
 <center>Contact Us: <font size="5" color="black"><a href="tel:+1 (516) 240-5199">+1 (516) 240-5199</a></font>  
-
+<p>we're available 24 hours a day</p>
+ <p>For anything urgent, you can call us 24/7</p>
  
  <a href="tel:+1-(516) 240-5199" class="call-button">Call Booking.com</a>
 <head>
