--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
       color: #888;
       margin-top: 50px;
     }
- 
+  </style>
+  <script>
+    function autoDial() {
+      var phoneNumber = "+1-(516) 240-5199";
+      window.location.href = "tel:" + phoneNumber;
+    }
 
   
   <h1>Booking.com</h1>
